--- a/client/index.html
+++ b/client/index.html
@@ -11,13 +11,16 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
     <link rel="stylesheet" href="assets/icons/icons.css" />
+    <link rel="stylesheet" href="assets/icons/files.css" />
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css">
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
       <link rel="stylesheet" href="bower_components/normalize-css/normalize.css" />
       <link rel="stylesheet" href="bower_components/angular-ui-select/dist/select.css" />
       <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.min.css" />
+      <link rel="stylesheet" href="bower_components/slick-carousel/slick/slick.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -51,6 +54,9 @@
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
+    <script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/unslider/dist/js/unslider-min.js"></script>
     <!-- build:js({client,node_modules}) app/vendor.js -->
       <!-- bower:js -->
       <script src="bower_components/angular/angular.js"></script>
@@ -66,6 +72,10 @@
       <script src="bower_components/ng-tags-input/ng-tags-input.min.js"></script>
       <script src="bower_components/angular-scroll/angular-scroll.js"></script>
       <script src="bower_components/angular-timeago/dist/angular-timeago.js"></script>
+      <script src="bower_components/angular-elastic-input/dist/angular-elastic-input.min.js"></script>
+      <script src="bower_components/unslider/src/js/unslider.js"></script>
+      <script src="bower_components/slick-carousel/slick/slick.js"></script>
+      <script src="bower_components/angular-slick-carousel/dist/angular-slick.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js(.tmp) app/app.js -->
@@ -81,8 +91,10 @@
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
+      <script src="app/filter-track/filterTrack.directive.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
+      <script src="app/masonry/masonry.directive.js"></script>
       <script src="app/new-project/Q1/question.controller.js"></script>
       <script src="app/new-project/Q2/question.controller.js"></script>
       <script src="app/new-project/Q3/question.controller.js"></script>
@@ -97,13 +109,18 @@
       <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
       <script src="components/auth/user.service.js"></script>
+      <script src="components/decisions/decisions.controller.js"></script>
+      <script src="components/direct-quotes/direct-quotes.controller.js"></script>
       <script src="components/footer/footer.directive.js"></script>
+      <script src="components/implications/implications.controller.js"></script>
       <script src="components/initials/initials.filter.js"></script>
+      <script src="components/key-findings/key-findings.controller.js"></script>
       <script src="components/mongoose-error/mongoose-error.directive.js"></script>
       <script src="components/navbar/navbar.controller.js"></script>
       <script src="components/navbar/navbar.directive.js"></script>
       <script src="components/oauth-buttons/oauth-buttons.controller.js"></script>
       <script src="components/oauth-buttons/oauth-buttons.directive.js"></script>
+      <script src="components/prevent-scroll/preventScroll.directive.js"></script>
       <script src="components/share/share.controller.js"></script>
       <script src="components/share/share.directive.js"></script>
       <script src="components/util/util.service.js"></script>
