--- a/client/index.html
+++ b/client/index.html
@@ -38,6 +38,7 @@
     <!-- <navbar></navbar> -->
     <div ui-view=""></div>
     <footer></footer>
+    <sidebar></sidebar>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
@@ -75,6 +76,7 @@
       <script src="bower_components/angular-elastic-input/dist/angular-elastic-input.min.js"></script>
       <script src="bower_components/slick-carousel/slick/slick.js"></script>
       <script src="bower_components/angular-slick-carousel/dist/angular-slick.js"></script>
+      <script src="bower_components/angular-elastic/elastic.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js(.tmp) app/app.js -->
@@ -102,6 +104,7 @@
       <script src="app/project/browse/browse.controller.js"></script>
       <script src="app/project/index/project.controller.js"></script>
       <script src="app/project/project.js"></script>
+      <script src="components/account/account.controller.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
@@ -120,6 +123,7 @@
       <script src="components/prevent-scroll/preventScroll.directive.js"></script>
       <script src="components/share/share.controller.js"></script>
       <script src="components/share/share.directive.js"></script>
+      <script src="components/sidebar/sidebar.directive.js"></script>
       <script src="components/util/util.service.js"></script>
       <!-- endinjector -->
     <!-- endbuild -->
