--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,7 @@
       <link rel="stylesheet" href="bower_components/angular-ui-select/dist/select.css" />
       <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.min.css" />
       <link rel="stylesheet" href="bower_components/slick-carousel/slick/slick.css" />
+      <link rel="stylesheet" href="bower_components/trix/dist/trix.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -77,6 +78,8 @@
       <script src="bower_components/slick-carousel/slick/slick.js"></script>
       <script src="bower_components/angular-slick-carousel/dist/angular-slick.js"></script>
       <script src="bower_components/angular-elastic/elastic.js"></script>
+      <script src="bower_components/trix/dist/trix.js"></script>
+      <script src="bower_components/angular-trix/dist/angular-trix.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js(.tmp) app/app.js -->
@@ -111,6 +114,7 @@
       <script src="components/auth/user.service.js"></script>
       <script src="components/decisions/decisions.controller.js"></script>
       <script src="components/direct-quotes/direct-quotes.controller.js"></script>
+      <script src="components/fix-scroll/fix-scroll.directive.js"></script>
       <script src="components/footer/footer.directive.js"></script>
       <script src="components/implications/implications.controller.js"></script>
       <script src="components/initials/initials.filter.js"></script>
