--- a/client/index.html
+++ b/client/index.html
@@ -124,6 +124,7 @@
       <script src="components/navbar/navbar.directive.js"></script>
       <script src="components/oauth-buttons/oauth-buttons.controller.js"></script>
       <script src="components/oauth-buttons/oauth-buttons.directive.js"></script>
+      <script src="components/persona/persona.controller.js"></script>
       <script src="components/prevent-scroll/preventScroll.directive.js"></script>
       <script src="components/share/share.controller.js"></script>
       <script src="components/share/share.directive.js"></script>
