--- a/client/index.html
+++ b/client/index.html
@@ -129,6 +129,7 @@
       <script src="components/share/share.controller.js"></script>
       <script src="components/share/share.directive.js"></script>
       <script src="components/sidebar/sidebar.directive.js"></script>
+      <script src="components/size-nav/fix-scroll.directive.js"></script>
       <script src="components/util/util.service.js"></script>
       <!-- endinjector -->
     <!-- endbuild -->
