--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
       <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.min.css" />
       <link rel="stylesheet" href="bower_components/slick-carousel/slick/slick.css" />
       <link rel="stylesheet" href="bower_components/trix/dist/trix.css" />
+      <link rel="stylesheet" href="bower_components/ng-sortable/dist/ng-sortable.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -90,6 +91,9 @@
       <script src="bower_components/rangy/rangy-serializer.js"></script>
       <script src="bower_components/rangy/rangy-textrange.js"></script>
       <script src="bower_components/angular-animate/angular-animate.js"></script>
+      <script src="bower_components/ng-sortable/dist/ng-sortable.js"></script>
+      <script src="bower_components/jquery-ui/jquery-ui.js"></script>
+      <script src="bower_components/angular-ui-sortable/sortable.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js(.tmp) app/app.js -->
